fix: min-height on mobile

--- a/src/styles/blocks/Error.scss
+++ b/src/styles/blocks/Error.scss
@@ -15,7 +15,7 @@
         min-height: calc(100dvh - 8.5rem);
     }
     @media (max-width: $point4) {
-        min-height: calc(100dvh - 7rem);
+        min-height: calc(100dvh - 7rem - 6rem);
         padding-top: 3rem;
     }
 }
